fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saasbase-fe-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: saasbase-fe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: saasbase-fe
    spec:
      containers:
        - name: frontend
          image: docker.io/sssaini/saasbase-fe:0.1
---
kind: Service
apiVersion: v1
metadata:
  name: fe-service
spec:
  selector:
    app.kubernetes.io/name: saasbase-fe
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
