nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
  namespace: default
spec:
  tls:
    - hosts:
        - echo.bearbill.com
        - quote.bearbill.com
  rules:
    - host: echo.bearbill.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-service
                port:
                  number: 3000
    - host: quote.bearbill.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-service
                port:
                  number: 7001
  ingressClassName: nginx
